<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddDeliveryAddressActivity">

    <TextView
        android:id="@+id/textView"
        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/add_delivery_address"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="@color/grayLight"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="30dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="5dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginVertical="5dp"
                android:paddingHorizontal="20dp"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:background="@drawable/edit_text_background" />

            <EditText
                android:id="@+id/phoneNo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginVertical="5dp"
                android:paddingHorizontal="20dp"
                android:hint="@string/phone_no"
                android:inputType="phone"
                android:background="@drawable/edit_text_background"
                />

            <EditText
                android:id="@+id/flatNo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginVertical="5dp"
                android:paddingHorizontal="20dp"
                android:hint="@string/flat_no"
                android:inputType="number"
                android:background="@drawable/edit_text_background"/>

            <EditText
                android:id="@+id/building"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginVertical="5dp"
                android:paddingHorizontal="20dp"
                android:hint="@string/building"
                android:background="@drawable/edit_text_background"/>

            <EditText
                android:id="@+id/wing"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginVertical="5dp"
                android:paddingHorizontal="20dp"
                android:hint="@string/wing"
                android:background="@drawable/edit_text_background"/>

            <EditText
                android:id="@+id/area"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginVertical="5dp"
                android:paddingHorizontal="20dp"
                android:hint="@string/area"
                android:background="@drawable/edit_text_background"/>

            <EditText
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginVertical="5dp"
                android:paddingHorizontal="20dp"
                android:hint="@string/city"
                android:background="@drawable/edit_text_background"/>

            <EditText
                android:id="@+id/latitude"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginVertical="5dp"
                android:paddingHorizontal="20dp"
                android:hint="@string/latitude"
                android:inputType="numberSigned|numberDecimal"
                android:background="@drawable/edit_text_background"/>

            <EditText
                android:id="@+id/longitude"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginVertical="5dp"
                android:paddingHorizontal="20dp"
                android:hint="@string/longitude"
                android:inputType="numberSigned|numberDecimal"
                android:background="@drawable/edit_text_background"/>

            <EditText
                android:id="@+id/googleAddressData"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginVertical="5dp"
                android:paddingHorizontal="20dp"
                android:hint="@string/google_address_data"
                android:background="@drawable/edit_text_background"/>

            <EditText
                android:id="@+id/instructions"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginVertical="5dp"
                android:paddingHorizontal="20dp"
                android:hint="@string/instructions"
                android:background="@drawable/edit_text_background"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/add"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:text="@string/add"
                    android:textAllCaps="false"
                    app:cornerRadius="30dp"
                    app:backgroundTint="@color/green"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancel"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:cornerRadius="30dp"
                    app:backgroundTint="@color/red"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>