<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:background="@drawable/dialog_background">

        <TextView
            android:id="@+id/textView"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/green"
            android:text="@string/add_delivery_address"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/json"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginVertical="10dp"
            android:paddingHorizontal="30dp"
            android:paddingVertical="20dp"
            android:gravity="top"
            android:hint="@string/enter_json_data"
            android:background="@drawable/edit_text_background"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:cornerRadius="30dp"
                app:backgroundTint="@color/red"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/save"
                android:textAllCaps="false"
                app:cornerRadius="30dp"
                app:backgroundTint="@color/green"/>

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>