<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    >

    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_margin="40dp"
        android:orientation="vertical"
        android:background="@drawable/dialog_background">

        <TextView
            android:id="@+id/textView"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/green"
            android:text="@string/add_delivery_address"
            android:textStyle="bold"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fromJSONFile"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/from_json_file"
            android:textAllCaps="false"
            app:cornerRadius="30dp"
            app:backgroundTint="@color/green"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addManually"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/add_manually"
            android:textColor="@color/green"
            android:textAllCaps="false"
            app:cornerRadius="30dp"
            app:backgroundTint="@color/white"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>